# cas-registration

./: .bandit  .gitignore  .gitleaks.toml  .gitleaksignore  .gitlint  .pre-commit-config.yaml  .prettierignore  .sonarcloud.properties  .tool-versions  .trivyignore  .yarnrc.yml  CHANGELOG.md  COMPLIANCE.yaml  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  FRONTEND_SETUP.md  Makefile  README.md  TECH_STACK.md  babel.config.js  bcgovpubcode.yml  deploy.sh  docker-compose.yaml  docker-compose.yml  erd.md  index.yaml  nx.json  package.json  pre-commit-config.yaml  prek.toml  renovate.json5  report_html.html  report_json.json  requirements.txt  shipit.yml
bc_obps/: .coveragerc  .dockerignore  .env  .env.example  .pylintrc  .tool-versions  Dockerfile  Makefile  bandit.yaml  clear_db.sql  docker-compose.dev.yml  handle_exception.py  manage.py  mypy.ini  parse_vs.ipynb  pyproject.toml  pytest.ini  pytest.toml  start_report_for_past_year.py  test_sample.py  timeline.txt
bc_obps/bc_obps/: api.py  asgi.py  celery.py  error_tracking.py  models.py  sentry_transport.py  settings.py  storage_backends.py  urls.py  wsgi.py
bc_obps/common/: admin.py  apps.py  constants.py  enums.py  exceptions.py  models.py  permissions.py  signals.py  utils.py
bc_obps/common/api/: __init__.py  create_superuser.py  router.py  test_errors.py  test_sentry.py
bc_obps/common/middleware/: kubernetes_health_check.py  mock_time_middleware.py  rls_current_user.py
bc_obps/common/migrations/: 0001_initial.py  0001_initial_squashed_0104_V5_0_0.py  0002_admin_access_request_email_template.py  0002_admin_access_request_email_templates.py  0003_operator_access_request_email_templates.py  0004_new_operator_and_admin_access_request_email_templates.py  0004_operation_boro_id_email_templates.py  0005_V1_5_0.py  0005_emailnotificationtemplate_brianna.py  0005_operation_boro_id_email_templates.py  0006_V1_5_1.py  0006_operation_boro_id_email_templates.py  0006_operation_opt_in_and_boro_id_email_templates.py  0007_operation_boro_id_email_templates.py  0007_operation_opt_in_and_boro_id_email_templates.py  0008_operation_opt_in_and_boro_id_email_templates.py  0009_V1_5_2.py  0010_dashboarddata.py  (+169 more)
bc_obps/common_utils/: enums.py
bc_obps/compliance/: admin.py  apps.py  constants.py  dataclass.py  emails.py  enums.py  signals.py  tasks.py
bc_obps/data_import_scripts/: copy_csv_data_to_db.py  copy_db_from_pod_to_local.py
bc_obps/events/: README.md  apps.py  signals.py
bc_obps/registration/: admin.py  api.py  apps.py  constants.py  decorators.py  emails.py  fields.py  kubernetesMiddleware.py  managers.py  models.py  schema.py  signals.py  tests.py  utils.py  utils.py.orig
bc_obps/reporting/: admin.py  apps.py  constants.py  dataclass.py  models.py  permissions.py  signals.py  utils.py
bc_obps/rls/: apps.py  enums.py  models.py  utils.py
bc_obps/service/: __init__.py  activity_service.py  addresses_service.py  application_access_service.py  compliance_dashboard_service.py  compliance_fee_service.py  compliance_obligation_service.py  compliance_period_service.py  compliance_summary_service.py  contact_service.py  contact_service_v2.py  current_user_service.py  data_access_service.py  document_service.py  document_service_v2.py  elicensing_api_client.py  elicensing_link_service.py  elicensing_service.py  facility_designated_operation_timeline_service.py  facility_report_service.py  facility_service.py  facility_snapshot_service.py  fee_elicensing_service.py  form_builder_service.py  handle_addresses_service.py  obligation_elicensing_service.py  operation_designated_operator_timeline_service.py  operation_service.py  operation_service_v2.py  operator_elicensing_service.py  operator_service.py  operator_service_v2.py  product_service.py  report_additional_data.py  report_config_service.py  report_person_responsible.py  report_service.py  report_version_service.py  reporting_year_service.py  transfer_event_service.py  (+5 more)
bc_obps/task_scheduler/: factories.py  retryable.py
bc_obps/tests/: conftest.py  test_storage_backends.py
registration/: pyproject.toml
registration/tests/: test_registration.py
(+8742 files in other folders)
