[tool.poetry]
name = "registration"
version = "0.1.0"
description = ""
authors = ["Andrea Williams <andrea.williams@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.4"
pylint = "^2.17.5"
python-dotenv = "^1.0.0"
django-ninja = "^0.22.2"
psycopg2 = "^2.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
    /(
        \.git          # exclude the ".git" directory
        | \.hg           # exclude the ".hg" directory
        | \.mypy_cache   # exclude the ".mypy_cache" directory
        | \.tox          # exclude the "tox" virtualenv directory
        | \.venv         # exclude the "venv" virtualenv directory
        | _build         # exclude the "_build" directory
        | buck-out       # exclude the "buck-out" directory
        | build          # exclude the "build" directory
        | dist           # exclude the "dist" directory
        | node_modules   # exclude the "node_modules" directory
    )/
'''