[tool.poetry]
name = "registration"
version = "0.1.0"
description = ""
authors = ["Andrea Williams <andrea.williams@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.13"
python-dotenv = "^1.0.0"
django-ninja = "^1.3.0"
psycopg = "^3.1.10"
psycopg-binary = "^3.1.10"
django-phonenumber-field = "^7.1.0"
django-phonenumbers = "^1.0.1"
django-storages = {extras = ["google"], version = "^1.14"}
whitenoise = "^6.5.0"
pre-commit = "^3.4.0"
django-cors-headers = "4.2.0"
django-localflavor = "^4.0"
django-simple-history = "^3.4"
gunicorn = "^22.0.0"
sentry-sdk = {extras = ["django"], version = "^2.8.0"}
dj-database-url = "^2.1.0"
django-pgtrigger = "^4.13.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.1.1"
pytest-picked = "^0.5.0"
model-bakery = "^1.16.0"
django-extensions = "^3.2.3"
ipdb = "^0.13.13"
pytest-cov = "^4.1.0"
django-silk = "^5.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.2"
mypy = "^1.10.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.0"}
types-requests = "^2.31.0.20240406"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
    /(
        \.git          # exclude the ".git" directory
        | \.hg           # exclude the ".hg" directory
        | \.mypy_cache   # exclude the ".mypy_cache" directory
        | \.tox          # exclude the "tox" virtualenv directory
        | \.venv         # exclude the "venv" virtualenv directory
        | _build         # exclude the "_build" directory
        | buck-out       # exclude the "buck-out" directory
        | build          # exclude the "build" directory
        | dist           # exclude the "dist" directory
        | node_modules   # exclude the "node_modules" directory
    )/
'''
