[tool.poetry]
name = "registration"
version = "0.1.0"
description = ""
authors = ["Andrea Williams <andrea.williams@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.4"
django-rest-framework = "^0.1.0"
pylint = "^2.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
